# blab-controller

./: .gitignore  .pre-commit-config.yaml  ADDING_BOTS.md  INSTALL.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish-doc.yaml
blab-controller/: __init__.py  manage.py  run_DEV.sh
blab-controller/chat/: __init__.py  admin.py  apps.py  bots.py  chats.py  consumers.py  models.py  routing.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  views.py
blab-controller/chat/migrations/: 0002_alter_message_conversation.py  0003_alter_message_conversation.py  0005_remove_participant_is_present.py  0006_message_file_message_file_key_message_file_size_and_more.py  0007_message_external_file_url.py  0011_message_command.py
blab-controller/controller/: __init__.py  asgi.py  celery.py  routing.py  urls.py  wsgi.py
blab-controller/controller/settings/: __init__.py  _tests.py  base.py  dev.py  dev_TEMPLATE.py  dev_base.py  prod_TEMPLATE.py
blab_controller/: run_DEV.sh
blab_controller/chat/: __init__.py  admin.py  bots.py  chats.py  consumers.py  models.py  serializers.py  signals.py  tasks.py  views.py
blab_controller/chat/migrations/: 0001_initial.py  0004_message_local_id_unique.py  0008_alter_message_type.py  0009_messageoption.py  0010_message_approval_status.py  0012_message_sent_by_manager_and_more.py  0013_participant_is_required.py
blab_controller/controller/: celery.py
blab_controller/controller/settings/: __init__.py  _tests.py  base.py  dev_TEMPLATE.py  dev_base.py  redis.conf
docs/: conf.py  index.rst  title.rst
docs/_static/: fix.js  override.css
